FEE-1223 Fixed a number of bugs that were introduced with toggle max's: FEE-1263 IE 10 sizing (due to css for modal-content over modal-container), Message box title colors and styles need to be corrected (same css issue), FEE-1208 set overflow hidden on the content of modal-body processing case.  Also disable the buttons for toggle max and close when processing. Fix class naming for buttons to btn- format per Nick L.

--- a/src/global-styles/standalone/_buttons.scss
+++ b/src/global-styles/standalone/_buttons.scss
@@ -48,13 +48,13 @@
     color: $button-text-color-disabled;
   }
 
-  &.small {
+  &.small, &.btn-small {
     height: $button-height-small;
     line-height: ($button-height-small - $button-border-width*2);
     font-size: $button-text-size-small;
   }
 
-  &.large {
+  &.large, &.btn-large {
     height: $button-height-large;
     line-height: ($button-height-large - $button-border-width*2);
     font-size: $button-text-size-large;
