--- a/src/modal-window/_modal-window.scss
+++ b/src/modal-window/_modal-window.scss
@@ -32,13 +32,13 @@
   position: static;
   margin: 0;
 
-  &.modal-lg .modal-content {
+  &.modal-lg .modal-content .modal-container {
     @include for("IE10+") {
       height: $dialog-max-height;
     }
   }
 
-  &.modal-sm .modal-content {
+  &.modal-sm .modal-content .modal-container {
     @include for("IE10+") {
       height: 50%;
     }
@@ -184,6 +184,15 @@
       right: 0;
       bottom: 0;
       background: rgba(255,255,255,.85);
+      display: none;
+    }
+
+    &.processing {
+      overflow: hidden;
+
+      .backwash {
+        display: block;
+      }
     }
   }
 
@@ -222,7 +231,7 @@
   }
 }
 
-.modal-content {
+.modal-content .modal-container {
   @include for("IE10+") {
     height: 60%;
   }
@@ -249,6 +258,10 @@
         &:hover {
           background-image: inline-svg-image("svg/small_close_hover_new.svg");
         }
+      }
+
+      i.disabled {
+        opacity: 0.5;
       }
     }
 
